--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -35,9 +35,8 @@ jobs:
       - name: Install Node.js dependencies
         run: npm ci
 
-      - name: Run linters
+      - name: Run prettier
         uses: wearerequired/lint-action@v2
         with:
-          eslint: true
           prettier: true
           auto_fix: true
